# HSSE-CV

./: main.py  pyproject.toml
homework/: hw1.ipynb
md/: Seminar_2.md
seminars/: sem1.ipynb  sem2.ipynb
seminars/runs/Sep10_13-12-22_grimm-HVY-WXX9/: events.out.tfevents.1757499142.grimm-HVY-WXX9.49151.3
seminars/runs/Sep10_13-13-18_grimm-HVY-WXX9/: events.out.tfevents.1757499198.grimm-HVY-WXX9.49151.4
